[metadata]
author_email = Julien Castiaux <julien.castiaux@gmail.com>
long_description = file: README.md
long_description_content_type = text/markdown
maintainer_email = Julien Castiaux <julien.castiaux@gmail.com>
name = circuit
version = 0.0.0
classifiers = 
	Programming Language :: Python :: 3 :: Only

[options]
packages = circuit
python_requires = >=3.9

[options.package_data]
* = data/*

[options.extras_require]
dev = 
	build
	pip

